--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
       font-family: 'Poppins', sans-serif;
       scroll-behavior: smooth;
       touch-action: pan-y;
+      overflow-x: hidden;
       -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
     }
   </style>
   <title>Bubble Pay</title>
 </head>
-
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
